# mujoco_embodied_ai

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
envs/: humanoid_deepmimic.py
src/mujoco_embodied_ai/: main.py
src/mujoco_embodied_ai/alignment/: inverse_rl_preferences.py  reward_hack_detector.py  safe_ppo_lagrangian.py
src/mujoco_embodied_ai/assets/: humanoid_custom.xml
src/mujoco_embodied_ai/training/: ppo_curriculum.py
