[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco_embodied_ai"
version = "2.0.0"
description = "Enterprise Embodied AI Alignment Engine featuring Safe RL (PPO-Lagrangian) and Reward Hacking Mitigation."
authors = [{ name = "Masthan Shaik", email = "masthan@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "mujoco>=3.0.0",
    "stable-baselines3>=2.1.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = ["black", "pytest"]
